--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@storybook/react": "^7.0.9",
     "@storybook/react-webpack5": "^7.0.9",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^20.1.1",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
@@ -39,7 +41,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.0.9",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "util": "^0.12.5"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -49,6 +52,10 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "framer-motion": "^10.12.8"
+    "@tanstack/react-query": "^4.29.5",
+    "axios": "^1.4.0",
+    "ethers": "^6.3.0",
+    "framer-motion": "^10.12.8",
+    "moment": "^2.29.4"
   }
 }
