--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-  "name": "repxwidget",
-  "version": "0.0.3",
-  "description": "A test package",
-  "type": "module",
-  "scripts": {
-    "rollup": "rollup -c",
-    "storybook": "storybook dev -p 3000",
-    "build-storybook": "storybook build"
-  },
-  "author": "Avk",
-  "license": "ISC",
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.5",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-typescript": "^11.1.0",
-    "@storybook/addon-essentials": "^7.0.9",
-    "@storybook/addon-interactions": "^7.0.9",
-    "@storybook/addon-links": "^7.0.9",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/blocks": "^7.0.9",
-    "@storybook/react": "^7.0.9",
-    "@storybook/react-webpack5": "^7.0.9",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/axios": "^0.14.0",
-    "@types/node": "^20.1.1",
-    "@types/react": "^18.2.6",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup": "^3.21.5",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "storybook": "^7.0.9",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4",
-    "util": "^0.12.5"
-  },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "@tanstack/react-query": "^4.29.5",
-    "axios": "^1.4.0",
-    "ethers": "^6.3.0",
-    "framer-motion": "^10.12.8",
-    "moment": "^2.29.4"
-  }
+	"name": "repxwidget",
+	"version": "0.0.3",
+	"description": "A test package",
+	"type": "module",
+	"scripts": {
+		"rollup": "rollup -c",
+		"storybook": "storybook dev -p 3000",
+		"build-storybook": "storybook build"
+	},
+	"author": "Avk",
+	"license": "ISC",
+	"peerDependencies": {
+		"react": ">=16"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.21.5",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.21.5",
+		"@rollup/plugin-commonjs": "^24.1.0",
+		"@rollup/plugin-node-resolve": "^15.0.2",
+		"@rollup/plugin-typescript": "^11.1.0",
+		"@storybook/addon-essentials": "^7.0.9",
+		"@storybook/addon-interactions": "^7.0.9",
+		"@storybook/addon-links": "^7.0.9",
+		"@storybook/addon-postcss": "^2.0.0",
+		"@storybook/blocks": "^7.0.9",
+		"@storybook/react": "^7.0.9",
+		"@storybook/react-webpack5": "^7.0.9",
+		"@storybook/testing-library": "^0.0.14-next.2",
+		"@types/axios": "^0.14.0",
+		"@types/node": "^20.1.1",
+		"@types/react": "^18.2.6",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.23",
+		"prettier": "2.8.8",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"rollup": "^3.21.5",
+		"rollup-plugin-dts": "^5.3.0",
+		"rollup-plugin-postcss": "^4.0.2",
+		"storybook": "^7.0.9",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^5.0.4",
+		"util": "^0.12.5"
+	},
+	"main": "dist/cjs/index.js",
+	"module": "dist/esm/index.js",
+	"files": [
+		"dist",
+		"src"
+	],
+	"types": "dist/index.d.ts",
+	"dependencies": {
+		"@tanstack/react-query": "^4.29.5",
+		"axios": "^1.4.0",
+		"ethers": "^6.3.0",
+		"framer-motion": "^10.12.8",
+		"moment": "^2.29.4"
+	}
 }
