--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "repxwidget",
-	"version": "0.0.3",
+	"version": "0.0.8",
 	"description": "A test package",
 	"type": "module",
 	"scripts": {
@@ -18,6 +18,7 @@
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.21.5",
 		"@rollup/plugin-commonjs": "^24.1.0",
+		"@rollup/plugin-json": "^6.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-typescript": "^11.1.0",
 		"@storybook/addon-essentials": "^7.0.9",
@@ -39,7 +40,9 @@
 		"react-dom": "^18.2.0",
 		"rollup": "^3.21.5",
 		"rollup-plugin-dts": "^5.3.0",
+		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
+		"rollup-plugin-sourcemaps": "^0.6.3",
 		"storybook": "^7.0.9",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.4",
@@ -55,7 +58,6 @@
 	"dependencies": {
 		"@tanstack/react-query": "^4.29.5",
 		"axios": "^1.4.0",
-		"ethers": "^6.3.0",
 		"framer-motion": "^10.12.8",
 		"moment": "^2.29.4"
 	}
